--- a/style.css
+++ b/style.css
@@ -1,14 +1,3 @@
-/* 
-align-items:center;
-align-content:space-around;
-display:flex;
-flex-direction:column;
-justify-content:center;
-max-width:1200px;
-padding:0.75em;
-margin-left:auto;
-margin-right:auto; */
-
 #header{
     display:flex;
     flex-direction:row;
@@ -74,40 +63,102 @@ padding:0 2%;
 font-weight:500;
 color:#E5E7EB;
 }
-.signup{
-background-color:#3882F6;
-border-radius: 1em;
-width: 90px;
-font-size:18px;
-text-align:center;
-}
 #third{
-    
+    margin-left:auto;
+    margin-right:auto;
+    width:65%;
+    border-spacing:20px;
 }
-p{
-
+.img1,.img2,.img3,.img4{
+    font-size:24px;
+    width:72px;
+    height:128px;
+    border:2px solid #3882F6;
+    border-radius: 25px;
+    border-width: thick;
+    text-align:center;
+    color:antiquewhite;
+    padding-right:5px;
+}
+#third th{
+    font-size:24px;    
 }
 #fourth{
-    display:flex;
     font-weight:lighter;
     font-size:36px;
     background-color: #E5E7EB;
     font-style: italic;
     padding-top:2em;
     width:100%;
+    text-align:center;
+}
+#fourth div{
+    font-weight:00;
+    width:75%;
+    text-align:initial;
+    margin-right:auto;
+    margin-left:auto;
 }
 #fourth .quote{
     width:90%;
-    font-size:36px;
+    font-size:24px;
     font-style:normal;
     font-weight:800;
-    align-items: flex-end;
-    padding-right: 0.25em;
+    padding-right: 5em;
+    text-align:right;
+    padding-bottom:65px;
 }
-img{
-
+a{
+    text-decoration: none;
 }
-:visited{
-    font-style: normal;
-
+#fifth{
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction:column;
+    height:128px;
+    border-radius:15px;
+    width:80%;
+    text-align:left;
+    padding-left:60px;
+    padding-top:30px;
+    background-color:#3882F6;
+    color:#E5E7EB;
+    font-weight:700;
+    font-size:24px;
+}
+#fifth.call{
+    display:flex;
+    flex-direction:row;
+}
+#fifth p.call{
+    font-weight:500;
+    font-size:16px;
+}
+.signup{
+    background-color:#3882F6;
+    border: 1.5px solid white;
+    border-radius:5px;
+    width: 160px;
+    font-size:18px;
+    text-align:center;
+    justify-content: center;
+    align-items: center;
+    }
+#footer{
+    background-color:#1F2937;
+    color:#F9FAF8;
+    text-align:center;
+    padding:15px;
+}
+#cta-container{
+    display:flex;
+    justify-content: center;
+    margin-right:auto;
+    margin-left:auto;
+    padding-bottom:60px;
+    padding-top:60px;
+}
+.argh{
+    display:flex;
+    flex-direction: column;
 }
